# geekshacking-mcp

./: pyproject.toml  test-new.js  todo_mcp.py
geekshacking_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: pyproject.toml
todo_mcp/: todo_mcp.py
